--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ img{
     max-width: 100%;
 }
 .container{
-    max-width:940px;
+    max-width:1440px;
     margin: 0 auto;
 }
 .row{
@@ -107,10 +107,10 @@ section 03 start from here
     background-image: url(../img/shapes/shape-1.png);
     background-repeat: no-repeat;
     background-position: left;
-    background-size: 450px;
+    background-size: 400px;
 }
 .section-03 .content{
-    padding: 35px 0;
+    padding: 30px 0;
 }
 .section-03 .content h1{
     font-size: 40px;
@@ -128,10 +128,11 @@ section 04 start from here
 .section-04{
     width: 100%;
     margin: 80px 0;
-    background-image: url(../img/shapes/shape-6.png);
+    background-image: url(../img/shapes/shape-3.png);
     background-repeat: no-repeat;
     background-position-x: right;
-    background-size: 450px;
+    background-position-y: bottom;
+    background-size: 400px;
 }
 .section-04 .content{
     padding: 35px 0;
@@ -145,4 +146,22 @@ section 04 start from here
     font-size: 21px;
     padding: 15px 0;
     color: gray;
+}
+/*================================
+ footer section start from here 
+ =================================*/
+.footer-section{
+    width: 100%;
+    background-color: #0B0D17;
+    height: 25vh;
+}
+.footer-content h1{
+    text-align: center;
+    color: white;
+    padding: 50px 0px 28px 3px;
+    margin: 0;
+}
+.footer-content p{
+    text-align: center;
+    color: white;
 }
